--- a/hw-10/dataPage.html
+++ b/hw-10/dataPage.html
@@ -21,13 +21,13 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Page 1</a>
+            <a class="nav-link" href="comparisons.html">Comparisons</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">Page 2</a>
+            <a class="nav-link disabled" href="maxTemp.html">Max Temperature</a>
           </li>
         <li class="nav-item">
-            <a class="nav-link disabled" href="#">Page 3</a>
+            <a class="nav-link disabled" href="plots.html">Pots</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -47,7 +47,9 @@
             <hr>
             <p>
 
-                <img src="assets/image1.png" alt='Image 1', width="500" height="600">
+                <center><img src="assets/testImage500.jpg" alt='Image 1', width="500" height="500"></center>
+                <br>
+                <br>
                 The purpose of this project was to analyze how weather changes as you get closer to the equator.  To accomplish this analaysi, we first pulled data from the OpenWeatherMap API to asseble a dataset on over 500 cities.
 
                 <br>
@@ -57,16 +59,13 @@
             </p>
           </div>
 
-          <div class="col-sm-4">
+          <div class="col-md-4">
             <h1>Visualizations</h1>
             <hr>
-                <div class="row">
-                  <div class="col">Image 1 will go here.</div>
-                  <div class="col">Image 2 will go here.</div>
-                  <div class="w-100"></div>
-                  <div class="col">Image 3 will go here.</div>
-                  <div class="col">Image 4 will go here.</div>
-                </div>
+            <p>
+                After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude.  Factors we looked at incldued: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as the explaintion and discriptions of any trends and correleations witnessed.
+            </p>
+
           </div>
 
           <div class='footer'>
