--- a/hw-10/temp.html
+++ b/hw-10/temp.html
@@ -48,7 +48,7 @@
 
         <div class="row">
           <div class="col-sm-8">
-            <h1>Summary:  Latitude vs. X</h1>
+            <h1>Summary:  Latitude vs. Maximum Temperature</h1>
             <hr>
             <p>
 
