--- a/hw-10/wind.html
+++ b/hw-10/wind.html
@@ -48,11 +48,11 @@
 
         <div class="row">
           <div class="col-sm-8">
-            <h1>Summary:  Latitude vs. X</h1>
+            <h1>Summary:  Latitude vs. Windspeed</h1>
             <hr>
             <p>
 
-                <center><img src="assets/temperature.png" alt='Image 1', width="500" height="500"></center>
+                <center><img src="assets/windspeed.png" alt='Image 1', width="500" height="500"></center>
                 <br>
                 <br>
                 The purpose of this project was to analyze how weather changes as you get closer to the equator.  To accomplish this analaysi, we first pulled data from the OpenWeatherMap API to asseble a dataset on over 500 cities.
