--- a/hw-10/index.html
+++ b/hw-10/index.html
@@ -64,7 +64,7 @@
             </p>
           </div>
 
-          <div class="col-md-4 rightSideBar">
+          <div class="col-md-4">
             <h1>Visualizations</h1>
             <hr>
 
