--- a/hw-12/app.html
+++ b/hw-12/app.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="container">
+<!--   <div class="container">
     <div class="row">
       <div class="col-sm-4">
         <div class="form-group">
@@ -38,7 +38,7 @@
         </table>
       </div>
     </div>
-  </div>
+  </div> -->
   <script src="./Data/data.js" type="text/javascript"></script>
   <script src="./app.js" type="text/javascript"></script>
 </body>
