--- a/hw-12/app.html
+++ b/hw-12/app.html
@@ -10,12 +10,17 @@
 </head>
 
 <body>
-<!--   <div class="container">
+  <div class="container">
     <div class="row">
       <div class="col-sm-4">
         <div class="form-group">
           <input type="text" class="form-control" id="date" placeholder="Enter Date">
+          <input type="text" class="form-control" id="state" placeholder="Enter State (Two-Letter)">
+          <input type="text" class="form-control" id="city" placeholder="Enter City Name">
+          <input type="text" class="form-control" id="country" placeholder="Enter Country">
+          <input type="text" class="form-control" id="shape" placeholder="Enter Shape">
           <a id="search" class="btn btn-default">Search</a>
+          <a id="erase" class="btn btn-default">Clear</a>
         </div>
       </div>
     </div>
@@ -24,7 +29,6 @@
         <table class="table table-striped">
           <thead>
             <tr>
-                <th>ID</th>
                 <th>Date/Time</th>
                 <th>City</th>
                 <th>State</th>
@@ -38,7 +42,7 @@
         </table>
       </div>
     </div>
-  </div> -->
+  </div>
   <script src="./Data/data.js" type="text/javascript"></script>
   <script src="./app.js" type="text/javascript"></script>
 </body>
