--- a/hw-12/app.html
+++ b/hw-12/app.html
@@ -15,41 +15,92 @@
 </head>
 
 <body>
+
+  <!--Nav Bar-->
+  <div class='container'>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">UFO Homework</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#">About</a>
+          <a class="nav-item nav-link" href="#">Contact</a>
+        </div>
+      </div>
+    </nav>
+  </div>
+
+  <!--Hero Image-->
+  <div class="container">
+    <center>
+    <div class='row'>
+      <div class="col-sm-12">
+        <img src="/Users/gta/Desktop/uscdatabootcamp/hw-12/assets/unsplash-1000-600.jpg" class='img-fluid'>
+      </div>
+    </div>
+    </center>
+  </div>
+
+  <!--One row containing two columns-->
   <div class="container">
     <div class="row">
       <div class="col-sm-4">
         <div class="form-group">
-          <input type="text" class="form-control" id="date" placeholder="Enter Date">
-          <input type="text" class="form-control" id="state" placeholder="Enter State (Two-Letter)">
-          <input type="text" class="form-control" id="city" placeholder="Enter City Name">
-          <input type="text" class="form-control" id="country" placeholder="Enter Country">
-          <input type="text" class="form-control" id="shape" placeholder="Enter Shape">
-          <a id="search" class="btn btn-default">Search</a>
-          <a id="erase" class="btn btn-default">Clear</a>
+          <br>
+          <center>
+            <h3>Search</h3>
+            <input type="text" class="form-control" id="date" placeholder="Enter Date">
+            <input type="text" class="form-control" id="state" placeholder="Enter State (Two-Letter)">
+            <input type="text" class="form-control" id="city" placeholder="Enter City Name">
+            <input type="text" class="form-control" id="country" placeholder="Enter Country">
+            <input type="text" class="form-control" id="shape" placeholder="Enter Shape">
+            <br>
+            <p>
+              Enter your search criteria to further analyze the data in the UFO sightings database.
+            </p>
+            <a id="search" class="btn btn-secondary btn-sm">Search</a>
+            <a id="erase" class="btn btn-secondary btn-sm">Clear</a>
+          </center>
         </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-12">
-        <table class="table table-striped">
-          <thead>
-            <tr>
-                <th>Date/Time</th>
-                <th>City</th>
-                <th>State</th>
-                <th>Country</th>
-                <th>Shape</th>
-                <th>Duration</th>
-                <th>Comments</th>
-            </tr>
-          </thead>
-          <tbody>
-          </tbody>
-        </table>
-      </div>
+
+        <div class="col-sm-8">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                  <th>Date/Time</th>
+                  <th>City</th>
+                  <th>State</th>
+                  <th>Country</th>
+                  <th>Shape</th>
+                  <th>Duration</th>
+                  <th>Comments</th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
+
+          <!--Paginations-->
+          <center>
+            <nav aria-label="Page navigation example">
+              <ul class="pagination">
+                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+              </ul>
+            </nav>
+          </center>
+        </div>
     </div>
   </div>
 
+  <!--Javascript Links-->
   <script src="./Data/data.js" type="text/javascript"></script>
 
   <script src="./app.js" type="text/javascript"></script>
@@ -63,3 +114,9 @@
 </body>
 
 </html>
+
+
+
+
+
+
